# ai-youtube-automation

./: .env.example  .gitignore  AI_YouTube_Automation.ipynb  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/video_engine/: __init__.py  api.py  cli.py
src/video_engine/core/: __init__.py  config.py  exceptions.py  logger.py  pipeline.py
src/video_engine/generators/: __init__.py  audio.py  image.py  image_prompt.py  seo.py  story.py
src/video_engine/processors/: __init__.py  shorts.py  subtitle.py  transcription.py  video.py
src/video_engine/uploaders/: __init__.py  youtube.py
tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_exceptions.py  test_image.py  test_image_prompt.py  test_integration.py  test_pipeline.py  test_seo.py  test_story.py  test_subtitle.py
